--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-
+  environment: GithubActionsEnvirouments
   build:
     runs-on: ubuntu-latest
 
@@ -28,7 +28,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_HUB_USER }}
+        username: ${{ vars.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_KEY }}
 
     - name: Build and push Docker image
@@ -38,5 +38,5 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          ${{ secrets.DOCKER_HUB_USER }}/firestore-emulator:latest
-          ${{ secrets.DOCKER_HUB_USER }}/firestore-emulator:${{ github.sha }}
+          ${{ vars.DOCKER_HUB_USER }}/firestore-emulator:latest
+          ${{ vars.DOCKER_HUB_USER }}/firestore-emulator:${{ github.sha }}
